feat(todo): implement add and delete functionality